# iOS-llm-zed-debug

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.host.json  extension.toml
debug_adapter_schemas/: ios-lldb.json
docs/: claude_autonomy_prompt.md  claude_tool.md
src/: backend.rs  cli.rs  gdb_remote.rs  lib.rs  main.rs  symbols.rs
tests/: dap_harness.rs
tools/: Makefile
