[package]
name = "ios-lldb-dap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
addr2line = { version = "0.25", features = ["loader"] }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0"
env_logger = "0.11"
gimli = "0.31"
log = "0.4"
object = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
zed_extension_api = { version = "0.7.0", default-features = false }
